log query result